--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 
 <body>
 
-<p align="center"><span style="font-size: x-large;">Financial Economics vs. 2</span></p>
-<p align="center"><span style="">For Undergraduate Students</span></p>
+<p align="center"><span style="font-size: x-large;">Information in Dynamic Financial Markets</span></p>
 <p align="center"><font size="4">The materials are based on <a title="" href="https://www.wiley.com/en-au/Financial+Economics-p-9780470596203">Financial Economics</a> and <a title="" href="https://www.amazon.com/Economics-Banking-Financial-Markets-Pearson/dp/0133836797">The Economics of Money, Banking, and Financial Markets</a>.</font></p>
 <div id="lectures">
-<p><a title="" href="https://shinotakayama.github.io/2103new/Lec1_IntroMoney.pdf"><span style="font-size: large;">Lecture 1</span></a> Introduction</p>
+<p><a title="" href="https://shinotakayama.github.io/2103new/Lec1_IntroMoney.pdf"><span style="font-size: large;">Main Code</span></a> Introduction</p>
 <p><a title="" href="https://shinotakayama.github.io/2103new/Lec2_Fund.pdf"><span style="font-size: large;">Lecture 2</span></a> The Foundation of Financial Economics</p>
 <p><a title="" href="https://shinotakayama.github.io/2103new/Lec3_Investment.pdf"><span style="font-size: large;">Lecture 3</span></a> Investment Decision and Asset Pricing</p>
 <p><a title="" href="https://shinotakayama.github.io/2103new/Lec4_Info.pdf"><span style="font-size: large;">Lecture 4</span></a> Asymmetric Information and Financial Contract</p>
