--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="/teaching/assets/css/style.css?v=0ce2849...">
 <head>
-  <title>Financial Economics</title>
+  <title>Information and Price</title>
 </head>
 <html>
 
 <body>
 
-<p align="center"><span style="font-size: x-large;">Information in Dynamic Financial Markets</span></p>
+<p align="center"><span style="font-size: x-large;">Information and Pricein Dynamic Financial Markets</span></p>
 <p align="center"><font size="4">The materials are based on <a title="" href="https://www.wiley.com/en-au/Financial+Economics-p-9780470596203">Financial Economics</a> and <a title="" href="https://www.amazon.com/Economics-Banking-Financial-Markets-Pearson/dp/0133836797">The Economics of Money, Banking, and Financial Markets</a>.</font></p>
 <div id="lectures">
-<p><a title="" href="https://shinotakayama.github.io/2103new/Lec1_IntroMoney.pdf"><span style="font-size: large;">Main Code</span></a> Introduction</p>
-<p><a title="" href="https://shinotakayama.github.io/2103new/Lec2_Fund.pdf"><span style="font-size: large;">Lecture 2</span></a> The Foundation of Financial Economics</p>
-<p><a title="" href="https://shinotakayama.github.io/2103new/Lec3_Investment.pdf"><span style="font-size: large;">Lecture 3</span></a> Investment Decision and Asset Pricing</p>
-<p><a title="" href="https://shinotakayama.github.io/2103new/Lec4_Info.pdf"><span style="font-size: large;">Lecture 4</span></a> Asymmetric Information and Financial Contract</p>
+<p><a title="" href="https://shinotakayama.github.io/2103new/Lec1_IntroMoney.pdf"><span style="font-size: large;">mainprog.m</span></a>This program solves the equilibrium.</p>
+<p><a title="" href="https://shinotakayama.github.io/2103new/Lec2_Fund.pdf"><span style="font-size: large;">plotfig.m</span></a> This program produces pictures from the result
+(**.mat).</p>
+<p><a title="" href="https://shinotakayama.github.io/2103new/Lec3_Investment.pdf"><span style="font-size: large;">savere.m</span></a>This program saves the simulation results.</p>
+<p><a title="" href="https://shinotakayama.github.io/2103new/Lec4_Info.pdf"><span style="font-size: large;"></span></a> Asymmetric Information and Financial Contract</p>
 <p><a title="" href="https://shinotakayama.github.io/2103new/Lec5_Risk.pdf"><span style="font-size: large;">Lecture 5</span></a> Risk and Insurance</p>
 <p><a title="" href="https://shinotakayama.github.io/2103new/Lec6_CAPM.pdf"><span style="font-size: large;">Lecture 6</span></a> Capital Asset Pricing Model (CAPM)</p>
 <p><a title="" href="https://shinotakayama.github.io/2103new/Lec7_Behav.pdf"><span style="font-size: large;">Lecture 7</span></a> Behavioral Finance</p>
