--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
 
 <p align="center"><span style="font-size: x-large;">Information and Pricein Dynamic Financial Markets</span></p>
-<p align="center"><font size="4">The materials are based on <a title="" href="https://www.wiley.com/en-au/Financial+Economics-p-9780470596203">Financial Economics</a> and <a title="" href="https://www.amazon.com/Economics-Banking-Financial-Markets-Pearson/dp/0133836797">The Economics of Money, Banking, and Financial Markets</a>.</font></p>
-<div id="lectures">
+<p align="center"><font size="4">This is a set of computer codes that computes equilibrium strategies for <a title="" href="https://www.sciencedirect.com/science/article/abs/pii/S016518892100021X">Price manipulation, dynamic informed trading, and the uniqueness of equilibrium in sequential trading</a> and <a title="" href="https://www.amazon.com/Economics-Banking-Financial-Markets-Pearson/dp/0133836797">The Economics of Money, Banking, and Financial Markets</a>.</font></p>
+<div id="Codes">
 <p><a title="" href="https://shinotakayama.github.io/2103new/Lec1_IntroMoney.pdf"><span style="font-size: large;">mainprog.m</span></a> This program solves the equilibrium.</p>
 <p><a title="" href="https://shinotakayama.github.io/2103new/Lec2_Fund.pdf"><span style="font-size: large;">plotfig.m</span></a> This program produces pictures from the result
 (**.mat).</p>
 <p><a title="" href="https://shinotakayama.github.io/2103new/Lec3_Investment.pdf"><span style="font-size: large;">savere.m</span></a> This program saves the simulation results.</p>
 <p><a title="" href="https://shinotakayama.github.io/2103new/Lec4_Info.pdf"><span style="font-size: large;">jactry.m</span></a> This program is used to check the bug whenever any
 issue arises.</p>
-  
+<div id="Functions">  
 <p><a title="" href="https://shinotakayama.github.io/2103new/Lec5_Risk.pdf"><span style="font-size: large;">nextvalue.m</span></a> nextvalue(x, int, b, m, f) computes the value of a
 function = m(int)*(x-b(int))+f(int)</p>
 <p><a title="" href="https://shinotakayama.github.io/2103new/Lec7_Behav.pdf"><span style="font-size: large;">ask.m</span></a> ask(b, u, r, hb, ls) computes ask price via Bayes' rule.</p>  
