--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <p align="center"><span style="font-size: x-large;">Information and Pricein Dynamic Financial Markets</span></p>
-<p align="center"><font size="4">This is a set of computer codes that computes equilibrium strategies for <a title="" href="https://www.sciencedirect.com/science/article/abs/pii/S016518892100021X">Price manipulation, dynamic informed trading, and the uniqueness of equilibrium in sequential trading</a> and <a title="" href="https://www.amazon.com/Economics-Banking-Financial-Markets-Pearson/dp/0133836797">The Economics of Money, Banking, and Financial Markets</a>.</font></p>
+<p align="center"><font size="4">This is a set of computer codes that computes equilibrium strategies for <a title="" href="https://www.sciencedirect.com/science/article/abs/pii/S016518892100021X">Price manipulation, dynamic informed trading, and the uniqueness of equilibrium in sequential trading</a> (Journal of Economic Dynamic and Control, 2021)
 <div id="Codes">
 <p><a title="" href="https://shinotakayama.github.io/2103new/Lec1_IntroMoney.pdf"><span style="font-size: large;">mainprog.m</span></a> This program solves the equilibrium.</p>
 <p><a title="" href="https://shinotakayama.github.io/2103new/Lec2_Fund.pdf"><span style="font-size: large;">plotfig.m</span></a> This program produces pictures from the result
