--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@ compatible and otherwise Regime = 0. bi is a bid price and as is an
 ask price if Regime = 1 and both take on 0 otherwise. It needs the
 following files: highbuy.m, highsell.m, lowbuy.m, and lowsell.m.</p>
 
-<p><a title="" href="https://shinotakayama.github.io/2103new/Lec7_Behav.pdf"><span style="font-size: large;">highbuy.m </span></a> These compute
-profit for each strategy.</p>
-<p><a title="" href="https://shinotakayama.github.io/2103new/Lec7_Behav.pdf"><span style="font-size: large;">highsell.m</span></a> These compute
-profit for each strategy.</p> 
-<p><a title="" href="https://shinotakayama.github.io/2103new/Lec7_Behav.pdf"><span style="font-size: large;">lowbuy.m</span></a> These compute
-profit for each strategy.</p>
-<p><a title="" href="https://shinotakayama.github.io/2103new/Lec7_Behav.pdf"><span style="font-size: large;">lowsell.m</span></a> These compute
-profit for each strategy.</p>
+<p><a title="" href="https://shinotakayama.github.io/2103new/Lec7_Behav.pdf"><span style="font-size: large;">highbuy.m </span></a> This
+computes profit for High to buy.</p>
+<p><a title="" href="https://shinotakayama.github.io/2103new/Lec7_Behav.pdf"><span style="font-size: large;">highsell.m</span></a> This
+computes profit for High to sell.</p>
+<p><a title="" href="https://shinotakayama.github.io/2103new/Lec7_Behav.pdf"><span style="font-size: large;">lowbuy.m</span></a> This
+computes profit for Low to buy.</p>
+<p><a title="" href="https://shinotakayama.github.io/2103new/Lec7_Behav.pdf"><span style="font-size: large;">lowsell.m</span></a> This
+computes profit for Low to sell.</p>
 <p><a title="" href="https://shinotakayama.github.io/2103new/Lec7_Behav.pdf"><span style="font-size: large;">checkH.m</span></a> [Regime, bid, ask, stHB] = checkH(u, r, L, I, b, N,
 mL, VL, mH, VH) Regime = 1 if type H manipulates and otherwise
 Regime = 0. bi is a bid price and as is an ask price if Regime = 1
