--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         }
 
         .container {
-            max-width: 800px;
+            max-width: 900px;
             margin: 40px auto;
             padding: 20px;
             background: white;
@@ -120,20 +120,41 @@
         <div class="link-section">
             <h2>Main Programs</h2>
             <ul class="code-links">
-                <li><a href="mainprog.m">mainprog.m</a> - Solves the equilibrium</li>
-                <li><a href="savere.m">savere.m</a> - Saves simulation results</li>
-                <li><a href="jacHL.m">jacHL.m</a> - Debugging tool</li>
+                <li><a href="mainprog.m">mainprog.m</a> - Solves the equilibrium.</li>
+                <li><a href="savere.m">savere.m</a> - Saves simulation results.</li>
+                <li><a href="jacHL.m">jacHL.m</a> - Debugging tool.</li>
             </ul>
         </div>
 
         <div class="link-section">
             <h2>Functions</h2>
             <ul class="code-links">
-                <li><a href="nextvalue.m">nextvalue.m</a> - Computes function values</li>
-                <li><a href="ask.m">ask.m</a> - Computes ask price via Bayes' rule</li>
-                <li><a href="bid.m">bid.m</a> - Computes bid price via Bayes' rule</li>
-                <li><a href="fd.m">fd.m</a> - Finds interval for a given value</li>
-                <li><a href="incentive.m">incentive.m</a> - Incentive compatibility calculations</li>
+                <li><a href="nextvalue.m">nextvalue.m</a> - Computes function values.</li>
+                <li><a href="ask.m">ask.m</a> - Computes ask price via Bayes' rule.</li>
+                <li><a href="bid.m">bid.m</a> - Computes bid price via Bayes' rule.</li>
+                <li><a href="fd.m">fd.m</a> - Finds interval for a given value.</li>
+                <li><a href="incentive.m">incentive.m</a> - Incentive compatibility calculations.</li>
+            </ul>
+        </div>
+
+        <div class="link-section">
+            <h2>Additional Functions</h2>
+            <ul class="code-links">
+                <li><a href="highbuy.m">highbuy.m</a> - Computes profit for High to buy.</li>
+                <li><a href="highsell.m">highsell.m</a> - Computes profit for High to sell.</li>
+                <li><a href="lowbuy.m">lowbuy.m</a> - Computes profit for Low to buy.</li>
+                <li><a href="lowsell.m">lowsell.m</a> - Computes profit for Low to sell.</li>
+                <li><a href="checkH.m">checkH.m</a> - Determines whether type H manipulates.</li>
+                <li><a href="checkL.m">checkL.m</a> - Determines whether type L manipulates.</li>
+                <li><a href="calaskH.m">calaskH.m</a> - Finds ask price for type H.</li>
+                <li><a href="calbidH.m">calbidH.m</a> - Computes bid price from calaskH.m.</li>
+                <li><a href="calaskL.m">calaskL.m</a> - Finds ask price for type L.</li>
+                <li><a href="calbidL.m">calbidL.m</a> - Computes bid price from calaskL.m.</li>
+                <li><a href="sol2real.m">sol2real.m</a> - Solves quadratic equation ax² + bx + c = 0.</li>
+                <li><a href="newtonHL.m">newtonHL.m</a> - Uses Newton-Raphson method to find solutions.</li>
+                <li><a href="value1.m">value1.m</a> - Computes today's values for type L and H.</li>
+                <li><a href="valueL.m">valueL.m</a> - Returns today's value for type L given bid price.</li>
+                <li><a href="valueH.m">valueH.m</a> - Returns today's value for type H given ask price.</li>
             </ul>
         </div>
 
@@ -147,4 +168,5 @@
 
 </body>
 </html>
+
 
