--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <ul class="code-links">
                 <li><a href="mainprog.m">mainprog.m</a> - Solves the equilibrium.</li>
                 <li><a href="savere.m">savere.m</a> - Saves simulation results.</li>
-                <li><a href="jacHL.m">jacHL.m</a> - Debugging tool.</li>
+                <li><a href="jacHL.m">jacHL.m</a> - Used to check for bugs.</li>
             </ul>
         </div>
 
@@ -132,8 +132,8 @@
                 <li><a href="nextvalue.m">nextvalue.m</a> - Computes function values.</li>
                 <li><a href="ask.m">ask.m</a> - Computes ask price via Bayes' rule.</li>
                 <li><a href="bid.m">bid.m</a> - Computes bid price via Bayes' rule.</li>
-                <li><a href="fd.m">fd.m</a> - Finds interval for a given value.</li>
-                <li><a href="incentive.m">incentive.m</a> - Incentive compatibility calculations.</li>
+                <li><a href="fd.m">fd.m</a> - Finds interval to which value f belongs.</li>
+                <li><a href="incentive.m">incentive.m</a> - Computes incentive compatibility.</li>
             </ul>
         </div>
 
@@ -150,7 +150,10 @@
                 <li><a href="calbidH.m">calbidH.m</a> - Computes bid price from calaskH.m.</li>
                 <li><a href="calaskL.m">calaskL.m</a> - Finds ask price for type L.</li>
                 <li><a href="calbidL.m">calbidL.m</a> - Computes bid price from calaskL.m.</li>
-                <li><a href="sol2real.m">sol2real.m</a> - Solves quadratic equation ax² + bx + c = 0.</li>
+                <li><a href="sol2real.m">sol2real.m</a> - Solves ax² + bx + c = 0 for two solutions.</li>
+                <li><a href="diffun.m">diffun.m</a> - Computes profit differences between strategies.</li>
+                <li><a href="fixedHL.m">fixedHL.m</a> - Returns strategies for type H and L when both manipulate.</li>
+                <li><a href="myfunHL.m">myfunHL.m</a> - Computes approximated indifference conditions.</li>
                 <li><a href="newtonHL.m">newtonHL.m</a> - Uses Newton-Raphson method to find solutions.</li>
                 <li><a href="value1.m">value1.m</a> - Computes today's values for type L and H.</li>
                 <li><a href="valueL.m">valueL.m</a> - Returns today's value for type L given bid price.</li>
@@ -165,6 +168,10 @@
             <p>&copy; 2024 Shino Takayama. All Rights Reserved.</p>
         </footer>
     </div>
+
+</body>
+</html>
+
 
 </body>
 </html>
