--- a/index.html
+++ b/index.html
@@ -97,19 +97,17 @@
 <body>
 
   <header>
-    Information and Price in Dynamic Financial Markets
+    Information and Price
   </header>
 
   <div class="container">
     <!-- Title -->
-    <h1>Computer Codes for Equilibrium Strategies</h1>
+    <h1>MATLAB Codes for Equilibrium Strategies</h1>
 
-    <!-- Original snippet content STARTS here -->
-    <!-- (All paragraphs and links preserved verbatim) -->
 
     <p align="center">
       <span style="font-size: x-large;">
-        Information and Pricein Dynamic Financial Markets
+        Information and Price in Dynamic Financial Markets
       </span>
     </p>
 
@@ -315,18 +313,16 @@
       </div>
     </div>
 
-    <center>
-      <!-- You can add more content here if you wish -->
-    </center>
 
-    <!-- Original snippet content ENDS here -->
+      <center>
+<p><a title="" href="http://www.shinotakayama.com">To Index Page</a></p>
+  
+Write an email to <a href="mailto:s.takayama1@uq.edu.au">Shino</a> if you have any questions. <br/> <br/>
+  <span style="color: #ff0000; font-size: small;">Copyright Shino Takayama </span></center>
 
-    <footer>
-      <p>&copy; 2025 Shino Takayama</p>
-    </footer>
-  </div>
-</body>
+    </body>
 </html>
+
 
 
 
